# devcord

./: .gitignore  docker-compose.yml
.github/workflows/: backend-docker-publish.yml  backend-fmt.yml  backend-test.yml  frontend-docker-publish.yml  frontend-lint.yml  frontend-tests.yml
backend/: .gitignore  Dockerfile.example  Makefile  docker-compose.yml
backend/api-gateway/: .env.example  Cargo.toml  Dockerfile
backend/api-gateway/config/: config.toml
backend/api-gateway/src/: circuit_breaker.rs  config.rs  handler.rs  jwt.rs  lib.rs  main.rs  state.rs  types.rs
backend/api-gateway/src/error/: mod.rs  status_code.rs
backend/api-gateway/src/load_balancer/: mod.rs
backend/api-gateway/src/load_balancer/strategies/: random.rs
backend/api-gateway/src/middleware/: auth.rs  load_balancer.rs  mod.rs  parser.rs  rate_limit.rs  router.rs
backend/api-gateway/tests/: integration_test.rs
backend/api-gateway/tests/common/: context.rs  helpers.rs
backend/auth-service/: .env  .env.example  Cargo.toml  Dockerfile
backend/auth-service/migrations/: 20250620095056_init.sql
backend/auth-service/src/: app.rs  jwt.rs  lib.rs  log_out.rs  logoff.rs  main.rs  register.rs  sign_in.rs
backend/auth-service/src/api_utils/: responses.rs
backend/auth-service/src/db/: db_errors.rs  init.rs  mod.rs  operations.rs  password_hasher.rs
backend/auth-service/src/models/: app_state.rs  auth_info.rs  mod.rs  user_info.rs
backend/auth-service/src/tests/: mod.rs
backend/call-service/: .env  Cargo.toml  Dockerfile
backend/call-service/src/: app.rs  jwt.rs  lib.rs  main.rs  room.rs  user_ws.rs
backend/fluvio/: .gitignore
backend/group-service/: Cargo.toml  Dockerfile  README.md
backend/group-service/migrations/: 01_setup_schema.sql
backend/group-service/src/: app.rs  config.rs  jwt.rs  lib.rs  main.rs  state.rs
backend/group-service/src/handlers/: group_handler.rs
backend/group-service/src/middleware/: auth.rs
backend/group-service/src/models/: group.rs  mod.rs
backend/group-service/src/routes/: group.rs  mod.rs
backend/message-service/: Cargo.toml  Dockerfile  README.md
backend/message-service/src/: app.rs  config.rs  lib.rs  main.rs  state.rs
backend/message-service/src/handlers/: message_handler.rs
backend/message-service/src/middleware/: auth.rs  channel.rs
backend/message-service/src/models/: claims.rs  group.rs  message.rs  mod.rs
backend/message-service/src/routes/: message.rs  mod.rs
backend/notification-service/: Cargo.toml  Dockerfile
backend/notification-service/src/: app.rs  connection.rs  fluvio_reader.rs  jwt.rs  lib.rs  main.rs
backend/notification-service/src/fluvio_listeners/: friendships.rs  mod.rs
backend/presence-service/: Cargo.toml  Dockerfile
backend/topic_structs/: Cargo.toml
backend/topic_structs/src/: lib.rs
backend/user-service/: Cargo.toml  Dockerfile
backend/user-service/migrations/: 01_setup_schema.sql
backend/user-service/src/: accept.rs  answer_request.rs  api_responses.rs  app.rs  fluvio_consumer.rs  friendships.rs  jwt.rs  lib.rs  main.rs  request.rs  sql_utils.rs  update.rs
backend/user-service/src/api_utils/: mod.rs  responses.rs  structs.rs  types.rs
backend/user-service/src/request/: block.rs  friendships.rs  mod.rs  user.rs
backend/user-service/src/sql_utils/: calls.rs  init.rs  mod.rs  structs.rs
backend/user-service/tests/: friendship.rs  mod.rs
frontend/: .gitignore  Dockerfile  Makefile  angular.json  eslint.config.js  karma.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.eslint.json
frontend/src/: index.html  server.ts
frontend/src/app/: app.config.server.ts  app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/blocks-block/: blocks-block.component.html  blocks-block.component.ts
frontend/src/app/blocks-unblock/: blocks-unblock.component.html  blocks-unblock.component.ts
frontend/src/app/call/: call.component.html  call.component.scss  call.component.ts
frontend/src/app/call/cameraButton/: cameraButton.component.html  cameraButton.component.ts
frontend/src/app/errors/: errors.ts
frontend/src/app/friendship-friend/: friendship-friend.component.html  friendship-friend.component.ts
frontend/src/app/friendship-request/: friendship-request.component.html  friendship-request.component.ts
frontend/src/app/friendship-sent/: friendship-sent.component.html  friendship-sent.component.ts
frontend/src/app/groups/: group.component.html  group.component.ts
frontend/src/app/groups/add-member/: add-member.component.html  add-member.component.ts
frontend/src/app/groups/add-user/: add-user.component.ts
frontend/src/app/groups/delete-member/: delete-member.component.ts
frontend/src/app/groups/delete-user/: delete-user.component.html  delete-user.component.ts
frontend/src/app/groups/group-creation/: group-creation.component.html  group-creation.component.ts
frontend/src/app/home/: home.component.html  home.component.ts
frontend/src/app/log-in/: log-in.component.html  log-in.component.ts
frontend/src/app/logIn/: logIn.component.html  logIn.component.ts
frontend/src/app/logout/: logOut.component.html  logOut.component.ts
frontend/src/app/main-menu/: main-menu.component.html  main-menu.component.ts  main-menuConstants.ts
frontend/src/app/mainMenu/: mainMenu.component.html  mainMenu.component.ts
frontend/src/app/received-friendship/: received-friendship.component.html  received-friendship.component.ts
frontend/src/app/recieved-friendship/: received-friendship.component.html  received-friendship.component.ts
frontend/src/app/register/: register.component.html  register.component.scss  register.component.ts
frontend/src/app/update/: update.component.html  update.component.ts
frontend/src/app/user/: user.component.html  user.component.ts
frontend/src/assets/: errors-codes.json
frontend/src/enviroment/: environment.secret.ts
frontend/src/environment/: environment.example.ts  environment.secret.ts
frontend/src/types/: Auth.ts
frontend/tests/: app.spec.ts
(+71 files in other folders)
