[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "ws"] }
anyhow = "1.0.98"
toml = "0.8.23"
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing-subscriber = "0.3.19"
tower = "0.5.2"
rand = "0.9.1"
reqwest = "0.12.20"
hyper = "1.6.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
http-body-util = "0.1.3"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
dashmap = "6.1.0"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
regex = "1.11.1"

[lib]
name = "api_gateway"
path = "src/lib.rs"
