[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "0.14", features = ["server"] }
axum = "0.8.4"
tokio = {version = "1.45.1", features=["full"]}
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
argon2 = "0.4"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
fluvio = "0.50.0"
topic_structs = {path = "../topic_structs"}
bincode = {version = "2.0.1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.3", features = ["trace"] }