[package]
name = "call-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["ws"] }
futures-util = "0.3.31"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = {version = "1.46.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
webrtc = "0.13.0"