[package]
name = "call-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["ws"] }
axum-extra = {version = "0.10.1", features = ["typed-header"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = {version = "0.8.6",features = ["postgres", "runtime-tokio"]}
thiserror = "2.0.12"
tokio = {version = "1.46.1", features = ["full"]}
tokio-stream = "0.1.17"
tower-http = {version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "fmt"]}
webrtc = "0.13.0"
