[package]
name = "message-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
fluvio = "0.50.1"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std"] }
tokio = { version = "1.45.1", features = ["full"] }
topic_structs = { path = "../topic_structs" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
