[package]
name = "notification-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bincode = "2.0.1"
dashmap = "6.1.0"
fluvio = "0.50.1"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version = "1.46.1", features=["full"]}
tower = "0.5.2"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
topic_structs = {path = "../topic_structs"}
async-std = "1.13.1"
