[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-std = "1.13.1"
axum = "0.8.4"
dotenvy = "0.15.7"
fluvio = "0.50.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = {version = "0.8.6",features = ["postgres", "runtime-tokio", "chrono"]}
tokio = {version = "1.45.1", features=["full"]}
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
topic_structs = {path = "../topic_structs"}
axum-extra = {version = "0.10.1", features = ["typed-header"] }
chrono = {version = "0.4.41", features = ["serde"] }
